<resources>
    <string name="app_name">JustJava</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="order">Order</string>
    <string name="order_name">\"Name : \"</string>
    <string name="order_whipped_cream">\"Add whipped cream? \"</string>
    <string name="order_chocolate">\"Add chocolate? \"</string>
    <string name="order_quantity">\"Quantity : \"</string>
    <string name="order_total">Total : $</string>
    <string name="order_thank_you">Thank you!</string>
</resources>